extra space phones fix

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -18,7 +18,7 @@ body {
 }
 
 .section {
-  min-height: 100vh;
+  // min-height: 100vh;
   padding: em(50px) 0;
   text-align: center;
 
